# carapuca-geant4-simulation

./: .gitignore  C-Arapuca-Open-New.code-workspace  CMakeLists.txt  INSTALL.md  README.md  geant4_particles.txt  main.cpp
.old/data/: data.json  logger.json
.old/include/construction/: construction.hh
data/carapuca/front_plate/: window_cut_window.json
data/cfg/: CArapuca.cfg
data/materials/: XArapuca.cfg
data/materials/EJ286/: abslength.csv  absorption.csv  efficiency.csv  emission.csv  reflect.csv  rindex.csv
data/materials/Filters/: abslength.csv  reflect.csv  rindex.csv  transmit.csv  transmit_opto.csv
data/materials/SiPM_S13360/: abslength.csv  quantum_efficiency.csv  (+1 more)
include/.cfg/: logger.hh
include/action/: action.hh
include/construction/: construction.hh
include/generator/: generator.hh
include/hits/: hits.hh
include/json_file/: json_file.hh
include/logger/: logger.hh  logmanager.hh
include/materials/: materials.hh
include/physics/: physics.hh
include/sensitive/: sensitive.hh
macros/: init_vis.mac  vis.mac
macros/.old/: cerenkov.batch  cerenkov.mac  photons.mac  photons_2.mac
macros/particles/: particles.mac
macros/vis/: vis.mac
src/action/: action.cc
src/construction/: construction.cc  detector.cc  optical_surfaces.cc  world.cc
src/generator/: generator.cc
src/hits/: hits.cc
src/json_file/: json_file.cc
src/logger/: logmanager.cc
src/materials/: air.cc  ej280.cc  ej286.cc  liquid_argon.cc  optical_glass.cc  ptp.cc  silicon.cc  vacuum.cc  vikuiti.cc
src/physics/: physics.cc
src/sensitive/: sensitive.cc
(+31 files in other folders)
